--- a/res/layout/activity_fullscreen_map.xml
+++ b/res/layout/activity_fullscreen_map.xml
@@ -1,7 +1,14 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.indukuri.mtdlive.FullscreenMapActivity" >
-</FrameLayout>
+    tools:context="com.indukuri.mtdlive.MapActivity" >
+
+    <fragment
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/map"
+        class="com.google.android.gms.maps.SupportMapFragment" />
+
+</RelativeLayout>
