--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -1,5 +1,9 @@
 <resources>
 
-    <color name="black_overlay">#66000000</color>
+    <color name="primary_dark">#303F9F</color>
+    <color name="primary">#3F51B5</color>
+    <color name="accent">#FF4081</color>
+    <color name="white_back">#66FFFFFF</color>
+    <color name="white">#FFFFFF</color>
 
 </resources>
