--- a/res/menu/mapactionbarmenu.xml
+++ b/res/menu/mapactionbarmenu.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     	xmlns:yourapp="http://schemas.android.com/apk/res-auto" >
     <item android:id="@+id/action_search"
-          android:icon="@android:drawable/ic_menu_search"
+          android:icon="@drawable/searchicon"
           android:title="@android:string/search_go"
           yourapp:showAsAction="ifRoom|collapseActionView"
           yourapp:actionViewClass="android.support.v7.widget.SearchView"/>
