--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -1,8 +1,8 @@
 <resources>
 
-    <color name="primary_dark">#303F9F</color>
-    <color name="primary">#3F51B5</color>
-    <color name="accent">#FF4081</color>
+    <color name="primary_dark">#2979FF</color>
+    <color name="primary">#F44336</color>
+    <color name="accent">#2979FF</color>
     <color name="white_back">#66FFFFFF</color>
     <color name="white">#FFFFFF</color>
 
