--- a/res/layout/etalistitem.xml
+++ b/res/layout/etalistitem.xml
@@ -30,12 +30,12 @@
     <ImageButton
         android:id="@+id/trackButton"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/eta"
         android:layout_alignParentRight="true"
         android:layout_alignTop="@+id/busname"
         android:background="@color/white"
-        android:gravity="center"
+        android:gravity="center"  
         android:src="@drawable/bell" />
 
 </RelativeLayout>
