--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -1,9 +1,7 @@
 <resources>
-
-    <color name="primary_dark">#2979FF</color>
-    <color name="primary">#F44336</color>
-    <color name="accent">#2979FF</color>
+    <color name="primary_dark">#FF0400</color>
+    <color name="primary">#FF4240</color>
+    <color name="accent">#3D8C99</color>
     <color name="white_back">#66FFFFFF</color>
     <color name="white">#FFFFFF</color>
-
 </resources>
